--- a/Vidily/Views/Movies/MovieForm.cshtml
+++ b/Vidily/Views/Movies/MovieForm.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Vidily.ViewModels.MovieFormViewModel
-    @{
-        ViewBag.Title = "MovieForm";
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
+@{
+    ViewBag.Title = "MovieForm";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 
 
@@ -12,31 +12,40 @@
 {
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.Name)
-        @Html.TextBoxFor(m => m.Movie.Name, new {@class = "form-control"})
+        @Html.LabelFor(m => m.Name)
+        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Name)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.FilmGenresId)
-        @Html.DropDownListFor(m => m.Movie.FilmGenresId, new SelectList(Model.FilmGenreses, "Id", "Genre"), "Select Genre", new {@class = "form-control"})
-
+        @Html.LabelFor(m => m.FilmGenresId)
+        @Html.DropDownListFor(m => m.FilmGenresId, new SelectList(Model.FilmGenreses, "Id", "Genre"), "Select Genre", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.FilmGenresId)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.ReleaseDate)
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:dd/MM/yyyy}", new {@class = "form-control"})
+        @Html.LabelFor(m => m.ReleaseDate)
+        @Html.TextBoxFor(m => m.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.ReleaseDate)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.DateAdded)
-        @Html.TextBoxFor(m => m.Movie.DateAdded, "{0:dd/MM/yyyy}", new {@class = "form-control"})
+        @Html.LabelFor(m => m.DateAdded)
+        @Html.TextBoxFor(m => m.DateAdded, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.DateAdded)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Movie.Stock)
-        @Html.TextBoxFor(m => m.Movie.Stock, new {@class = "form-control"})
+        @Html.LabelFor(m => m.Stock)
+        @Html.TextBoxFor(m => m.Stock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Stock)
     </div>
 
-    @Html.HiddenFor(m => m.Movie.Id)
+    @Html.HiddenFor(m => m.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+}
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
