--- a/Vidily/Views/Customers/Index.cshtml
+++ b/Vidily/Views/Customers/Index.cshtml
@@ -14,49 +14,41 @@
         <tr>
             <th>Customer</th>
             <th>Membership Type</th>
-            <th>Discount Rate</th>
             <th>Delete</th>
         </tr>
     </thead>
-    <tbody>
-
-        @if (Model.Count == 0)
-        {
-            <tr>
-                <td>We have no customers</td>
-            </tr>
-        }
-        else
-        {
-            foreach (var customer in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.ActionLink(@customer.Name, "Edit", new { id = customer.Id })
-                    </td>
-
-                    <td>
-                        @customer.MembershipType.Name
-                    </td>
-
-                    <td>
-                        @customer.MembershipType.DiscountRate%
-                    </td>
-
-                    <td><button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button></td>
-                </tr>
-            }
-        }
-
-
-    </tbody>
+    <tbody></tbody>
 </table>
 @section scripts
 {
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable();
-            $("#customers").on("click",".js-delete", function () {
+           var table = $("#customers").dataTable({
+                ajax: {
+                    url: "/api/customers",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, customer) {
+                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "membershipType.name"
+                    },
+                    
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<buttin class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                        }
+
+                    }
+                ]
+            });
+            $("#customers").on("click", ".js-delete", function () {
                 var button = $(this);
                 bootbox.confirm("Are you sure you want to delete this cutomer?", function (result) {
                     if (result) {
@@ -64,8 +56,7 @@
                             url: "api/customers/" + $(button).attr("data-customer-id"),
                             method: "DELETE",
                             success: function () {
-                                button.parents("tr").remove();
-
+                                table.row(button.parents("tr")).remove().draw();
                             }
                         });
 
